--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-    <style name="AppTheme.NoActionBar" >
+    <style name="AppTheme.NoActionBar" parent="AppTheme" >
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
     </style>
     <style name="menu_labels_style">
         <item name="android:background">@drawable/fab_label_background</item>
