--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,27 +6,106 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/settings_back_button_icon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/back_button_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/settings_profile_icon"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:src="@drawable/about_legal_icon"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#535151"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/settings_user_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/settings_user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:text="@string/settings_user_name"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@color/settings_menu"
+        app:layout_constraintBottom_toTopOf="@id/settings_card_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settings_profile_icon" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/settings_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settings_user_name">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/settings_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="@string/settings_header"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/settings_header_horizontal_line"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/settings_header">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#ababab">
+
+                </View>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/settings_account_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/settings_header_horizontal_line"
                 android:layout_margin="5dp"
-                android:clickable="true">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:clickable="true"
+                android:background="@drawable/settings_menu_background">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -37,14 +116,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="@string/settings_notes" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
+                    android:text="@string/settings_notes"
+                    android:textSize="16sp"
+                    android:textColor="@color/settings_menu"/>
             </LinearLayout>
 
             <LinearLayout
@@ -53,7 +127,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/settings_account_info"
                 android:layout_margin="5dp"
-                android:clickable="true">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:clickable="true"
+                android:background="@drawable/settings_menu_background">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -64,27 +141,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="@string/settings_notifications" />
+                    android:text="@string/settings_notifications"
+                    android:textSize="16sp"
+                    android:textColor="@color/settings_menu"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/settings_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_below="@id/settings_notifications"
                 android:layout_margin="5dp"
-                android:clickable="true">
+                android:clickable="true"
+                android:background="@drawable/settings_menu_background">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/settings_camera" />
+                    android:src="@drawable/settings_camera"
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="@string/settings_camera" />
+                    android:text="@string/settings_camera"
+                    android:textSize="16sp"
+                    android:textColor="@color/settings_menu"/>
             </LinearLayout>
 
             <LinearLayout
@@ -93,7 +178,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/settings_camera"
                 android:layout_margin="5dp"
-                android:clickable="true">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:clickable="true"
+                android:background="@drawable/settings_menu_background">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -104,11 +192,113 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="@string/settings_notes" />
+                    android:text="@string/settings_notes"
+                    android:textSize="16sp"
+                    android:textColor="@color/settings_menu"/>
             </LinearLayout>
 
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/about_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/settings_card_view"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/about_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="@string/about_header"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/about_header_horizontal_line"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/about_header">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#ababab">
+
+                </View>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/about_support"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_below="@id/about_header_horizontal_line"
+                android:layout_margin="5dp"
+                android:clickable="true"
+                android:background="@drawable/about_menu_background">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/about_support_icon"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/about_support"
+                    android:textSize="16sp"
+                    android:textColor="@color/about_menu"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/about_legal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_below="@id/about_support"
+                android:layout_margin="5dp"
+                android:clickable="true"
+                android:background="@drawable/about_menu_background">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/about_legal_icon"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/about_legal"
+                    android:textSize="16sp"
+                    android:textColor="@color/about_menu"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </android.support.constraint.ConstraintLayout>
