Added login verification and sign out feature

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,15 +7,17 @@
         <item
             android:id="@+id/all_notes"
             android:icon="@drawable/all_notes"
-            android:title="All Notes" />
+            android:title="@string/all_notes" />
         <item
             android:id="@+id/trash"
             android:icon="@drawable/delete"
-            android:title="Trash" />
+            android:title="@string/trash" />
         <item
             android:id="@+id/completed"
             android:icon="@drawable/completed"
-            android:title="Completed" />
-
+            android:title="@string/completed" />
+        <item
+            android:id="@+id/sign_out"
+            android:title="@string/sign_out" />
     </group>
 </menu>
