validation added in signup screen added

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -84,7 +84,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_hint"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <LinearLayout
@@ -116,7 +117,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password_hint"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <Button
