--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#2dbe60</color>
     <color name="colorPrimaryDark">#2dbe60</color>
     <color name="clicked">#228E48</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#6bf28f</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="settings_menu">#444</color>
@@ -11,4 +11,7 @@
     <color name="about_menu">#444</color>
     <color name="settings_background_on_touch">#eee</color>
     <color name="about_background_on_touch">#eee</color>
+    <color name="login_text_color">#5D616A</color>
+    <color name="login_background_color">#2E333B</color>
+    <color name="settings_horizonatal_line">#ababab</color>
 </resources>
