--- a/app/src/main/res/layout/recycler_section_header.xml
+++ b/app/src/main/res/layout/recycler_section_header.xml
@@ -3,7 +3,7 @@
 android:id="@+id/date_text"
 android:layout_width="match_parent"
 android:layout_height="25dp"
-android:background="#FAFAFA"
+android:background="@color/theme_light"
 android:layout_marginBottom="5dp"
 android:paddingTop="5dp"
 android:textColor="@color/black_semi_transparent"
