--- a/app/src/main/res/layout/recycler_cell_layout.xml
+++ b/app/src/main/res/layout/recycler_cell_layout.xml
@@ -19,12 +19,14 @@
     <TextView
         android:layout_marginTop="20dp"
         android:id="@+id/title"
+        android:layout_marginLeft="7dp"
+        android:layout_marginStart="7dp"
         android:layout_toEndOf="@+id/checkbox_multiselect"
         android:layout_toRightOf="@+id/checkbox_multiselect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/body"
@@ -34,8 +36,17 @@
         android:layout_toRightOf="@+id/checkbox_multiselect"
         android:layout_below="@+id/title"
         android:textSize="15sp"
-        android:layout_marginLeft="4dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/grey"
         android:layout_marginTop="10dp"/>
-
+    <View
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        android:layout_above="@+id/title"
+        android:background="@color/settings_background_on_touch"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"/>
 </RelativeLayout>
