--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,14 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/search_for_note"
-        android:title="search"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/search_note"/>
+    <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="@string/search"/>
 
     <item android:id="@+id/sort"
         android:title="@string/sort_options_menu"/>
 
     <item android:id="@+id/settings"
-        android:title="Settings"/>
+        android:title="@string/settings"/>
 </menu>
