--- a/app/src/main/res/layout/recycler_section_header.xml
+++ b/app/src/main/res/layout/recycler_section_header.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="35dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/date_text"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="12dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
         android:background="#80FAFAFA"
         android:paddingLeft="8dp"
         android:textColor="@color/grey"
