--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".objects.Trash">
+    tools:context=".Trash">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/trash_recycler"
         android:layout_width="match_parent"
