--- a/app/src/main/res/layout/new_note.xml
+++ b/app/src/main/res/layout/new_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,6 +10,17 @@
         android:layout_height="?android:attr/actionBarSize"
         android:elevation="4dp"
         />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
+        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
+        android:visibility="gone"
+        />
+
 
     <EditText
         android:id="@+id/note_title"
